# aoc-2025

./: Cargo.toml
src/: lib.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: day9.js  mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/template/: mod.rs
src/utils/: mod.rs
