[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.14.0"
regex = "1.11.1"
lazy_static = "1.5.0"
pathfinding = "4.11.0"
serde_json = "1.0.133"
permutator = "0.4.3"
memoize = "0.5.1"
thiserror = "2.0.3"
rayon = "1.10.0"